Project view1s {
    database_type:'view1s'
    note:''
 }



Table settings{
    id int [pk, increment]
    title varchar(225)
    name varchar(225)
    keywords text [default: null]
    descriptions text [default: null]
    favicon_url text [default: null]
    logo_url text [default: null]
    zalo_url text [default: null]
    telegram_url text [default: null]
    smtp_user varchar(225) [default: null]
    smtp_password varchar(225) [default: null]
    smtp_host varchar(225) [default: null]
    smtp_port varchar(50) [default: null]
    smtp_protocol varchar(50) [default: null]
    is_published tinyint(1) [default: 1]
    updated_at timestamp
}



Table providers as PRO {
    id int [pk, increment]
    name varchar(225)
    api_url text
    api_key text
    is_published tinyint(1) [default: 1]
    created_at timestamp
    updated_at timestamp
}



Table categories as CATE{
    id int [pk, increment]
    name varchar(225)
    is_published tinyint(1) [default: 1]
    created_at timestamp
    updated_at timestamp
}



Table services as SER {
    id int [pk, increment]
    category_id int [ref: > CATE.id]
    name varchar(225)
    note text(225)
    min int
    max int
    rate double
    profit double [note: 'service profit percent']
    is_refill tinyint(1) [default: 0]
    is_cancel tinyint(1) [default: 0]
    is_dripfeed tinyint(1) [default: 0]
    is_update tinyint(1) [default: 1]
    provider_id int [ref: > PRO.id]
    provider_service_id int
}

Enum Level {
    Member
    Admin
}



Table users as U{
    id int [pk, increment]
    full_name varchar(225)
    email varchar(225) [unique]
    username varchar(225) [unique]
    password varchar(225)
    balance double [default: 0]
    spend double [default: 0]
    api_key text
    level Level [default: 'Member']
    status tinyint(1) [default: 1]
    created_at timestamp
    updated_at timestamp
}

Enum auth_logs_type {
    login
    register
    change_info
}

Table auth_logs {
    id int [pk, increment]
    user_id int [ref: > U.id ]
    ip_address varchar(225)
    user_agent varchar(225)
    type auth_logs_type
    created_at timestamp
}


Enum balance_logs_type {
    buy_service
    recharge
}


Table balance_logs {
    id int [pk, increment]
    user_id int [ref: > U.id]
    type balance_logs_type
    amount double
    note text
    created_at timestamp
}


Enum deposit_methods_payment {
    bank
    momo
    other
}

Enum deposit_methods_type {
    auto
    manual
}

Table deposit_methods as D_M {
    id int [pk, increment]
    payment deposit_methods_type
    name varchar(225)
    note text [default: null]
    img_url text [default: null]
    min_amount double
    status tinyint(1) [default: 1]
}


Table deposit_accounts as D_A{
    id int [pk, increment]
    method_id int [ref: > D_M.id]
    name varchar(225)
    number varchar(225)
    note text [default: null]
    status tinyint(1) [default: 1]
}


Enum  deposit_status {
    Pending
    Canceled
    Success
}
Table deposits {
    id int [pk, increment]
    user_id int [ref: > U.id]
    note text [default: null]
    code varchar(225)
    deposit_account_id int [ref: > D_A.id]
    amount double
    status deposit_status [default: 'Pending']
    created_at timestamp
    updated_at timestamp
}

Enum order_type {
    Pending
   "In progress"
    Processing
    Canceled
    Partial
    Completed

}

Table orders {
    id int [pk, increment]
    user_id int [ref: > U.id]
    service_id int [ref: > SER.id]
    provider_id int [ref: > PRO.id]
    provider_order_id varchar(225)
    data text
    quantity int(11)
    start_count int(11)
    remains int(11)
    charge double
    is_refund tinyint(1) [default: 0]
    status order_type [default: 'Pending']
    created_at timestamp
    updated_at timestamp
}
